--- a/02_CRUD/package.json
+++ b/02_CRUD/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.12.1",
     "morgan": "~1.9.1"
   }
 }
