--- a/02_CRUD/package.json
+++ b/02_CRUD/package.json
@@ -1,9 +1,9 @@
 {
   "name": "02-crud",
   "version": "0.0.0",
-  "private": true,
+  "private": true, 
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
