--- a/02_CRUD/package.json
+++ b/02_CRUD/package.json
@@ -1,15 +1,16 @@
 {
   "name": "02-crud",
   "version": "0.0.0",
-  "private": true, 
+  "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "mongodb": "^4.12.1",
     "morgan": "~1.9.1"
