AuthPass - Add and configure passport

--- a/05_AuthPassport/.env.example
+++ b/05_AuthPassport/.env.example
@@ -1,5 +1,10 @@
 #
 # URL connection, ex: mongodb://localhost:27017
-MONGODB_CONNECTION=
+MONGODB_URL=
 # Database, ex: auth-passport
 MONGO_DB=
+#
+# Session Expire Time, in minutes, ex: 30
+EXPIRE_TIME=
+# Session Secret, strong key for encription
+SESSION_SECRET=
