--- a/05_AuthPassport/package.json
+++ b/05_AuthPassport/package.json
@@ -7,13 +7,18 @@
     "dev": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "mongodb": "^4.13.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
