AuthPass - Add sendmailer

--- a/05_AuthPassport/.env.example
+++ b/05_AuthPassport/.env.example
@@ -8,3 +8,12 @@ MONGO_DB=
 EXPIRE_TIME=
 # Session Secret, strong key for encription
 SESSION_SECRET=
+#
+# SMTP URL, ex: smtp.umbler.com
+SMTP_SERVER=
+# SMTP PORT ex: 587
+SMTP_PORT=
+# SMTP PORT ex: contato@empresa.com
+SMTP_USERNAME=
+# SMTP PORT ex: 123456
+SMTP_PASSWORD=
