--- a/05_AuthPassport/package.json
+++ b/05_AuthPassport/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "mongodb": "^4.13.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
