AuthPass - modify mongodb url for especific user and pass

--- a/05_AuthPassport/.env.example
+++ b/05_AuthPassport/.env.example
@@ -1,5 +1,5 @@
 #
-# URL connection, ex: mongodb://localhost:27017
+# URL connection, ex: mongodb://username:password@localhost:27017 or mongodb://username:password@localhost:27017?authSource=yourDatabase
 MONGODB_URL=
 # Database, ex: auth-passport
 MONGO_DB=
